--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>luenfire art</title>
-</head>
-<body>
+	<head>
+		<title>luenfire art</title>
+		
+		<style>
+			p{
+				text-indent:50px; text-align:justify; 
+				margin:1% 14%; line-height:30px;
+			}
+		</style>
+	</head>
 
-<h1>Hello Internet!</h1>
-<p>This is a paragraph.</p>
-<script>alert('Random Javascript!');</script>
-</body>
+	<body>
+		<center>
+		<h1>LUENFIRE ART</h1>
+		<p>click on links below</p>
+
+		<input type="button" value="store"
+		onclick="window.open('https://www.etsy.com/shop/luenfire')">
+		<input type="button" value="instagram"
+		onclick="window.open('http://www.instagram.com/luenfire')">
+		<input type="button" value="portfolio"
+		onclick="window.open('https://www.behance.net/luenfire')">
+		
+		<input type="button" value="twitter"
+		onclick="window.open('http://www.twitter.com/luenfire')">
+	</center>
+	</body>
 </html>
