--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 				text-indent:50px; text-align:justify; 
 				margin:1% 14%; line-height:30px;
 			}
+			
+			body{url(
+			background-image: url
+			}
 		</style>
 	</head>
 
 	<body>
 		<center>
 		<h1>LUENFIRE ART</h1>
-		<p>click on links below</p>
 
 		<input type="button" value="store"
 		onclick="window.open('https://www.etsy.com/shop/luenfire')">
@@ -25,6 +28,7 @@
 		
 		<input type="button" value="twitter"
 		onclick="window.open('http://www.twitter.com/luenfire')">
+		
 	</center>
 	</body>
 </html>
