--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>luenfire art</title>
 	<link rel="shortcut icon" type="image/png" href="image/favicon.png">
-	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<style>
 		p{
 			text-indent:50px; text-align:justify;
@@ -18,6 +18,7 @@
 		}
 
 		.button {
+			-webkit-appearance: none;
 		  background-color: #000000;
 			width: 600px;
 			height: 200px;
