--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 	<br><br><br>
 
 	<input type="button" class="button" value="INSTAGRAM"
-	onclick="window.open('http://www.instagram.com/luenfire')">
+	onclick="window.open('https://www.instagram.com/luenfire')">
 	<br><br><br>
 
 	<input type="button" class="button" value="TWITTER"
-	onclick="window.open('http://www.twitter.com/luenfire')">
+	onclick="window.open('https://www.twitter.com/luenfire')">
 
 	</center>
 </body>
