--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 	<title>luenfire art</title>
 	<link rel="shortcut icon" type="image/png" href="image/favicon.png">
 	<style>
+		@font-face {
+			font-family: impact; 
+			src: url('fonts/Impact.ttf');
+			src: url('fonts/Impact.eot?#iefix') format('embedded-opentype'),
+				url('fonts/Impact.woff') format('woff'), 
+				url('fonts/Impact.ttf')  format('truetype'), 
+				url('fonts/Impact.svg#Impact') format('svg');
+			font-weight: normal;
+			font-style: normal;
+		}	
+			
 		p{
 			text-indent:50px; text-align:justify;
 			margin:1% 14%; line-height:30px;
