--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		background-size: 100%;
 		margin: 10%;
 		}
-
+		
+		
+		/* button syntax block */
 		.button {
 			-webkit-appearance: none;
 		  background-color: #000000;
