--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		  color: white;
 		  text-align: center;
 		  text-decoration: none;
-		  display: inline-block;
+		  display: block;
 		  font-size: 100px;
 			font-family: impact;
 		  margin: 4px 2px;
